--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<!DOCTYPEhtml>
-<html>
-  <head>
-    <title>
-      Hello World
-    </title>
-  </head>
-  <body>
-    <h1> Hello World</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello World</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f8ff;
+      text-align: center;
+      padding-top: 50px;
+    }
+    h1 {
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+  <h1>Hello World</h1>
+</body>
 </html>
